# mai-os-labs

./: CMakeLists.txt  README.md
cp/: CMakeLists.txt  main.cpp
cp/src/: GamePlayer.cpp  client.cpp
cp/tests/: test.cpp
lab1/: CMakeLists.txt  README.md
lab1/include/: child.h  parent.h
lab1/src/: child.cpp  main.cpp  parent.cpp
lab1/tests/: test1.txt  test2.txt  test_main.cpp
lab2/: CMakeLists.txt  README.md  main.cpp
lab2/include/: Hex512.hpp  process.hpp  temp_file.hpp
lab2/src/: Hex512.cpp  main.cpp  process.cpp  temp_file.cpp
lab2/tests/: big_test.txt  test.cpp
lab3/: CMakeLists.txt  README.md
lab3/include/: child.h  parent.h
lab3/src/: child.cpp  main.cpp  parent.cpp  temp_file.cpp
lab3/tests/: test_main.cpp
lab4/: CMakeLists.txt  README.md
lab4/src/: PrimeCount.cpp  PrimeCount.h  Square.cpp  Square.h  main_dynamic.cpp  main_static.cpp
lab4/tests/: tests.cpp
lab5-7/: CMakeLists.txt
lab5-7/include/: BalancedTree.h  CalculationNode.h  ZMQFunctions.h
lab5-7/src/: Client.cpp  Server.cpp
lab5-7/tests/: test.cpp
